Fix Google Doc iframe bottom gap calculation

--- a/style.css
+++ b/style.css
@@ -569,8 +569,9 @@ model-viewer {
 }
 
 .block-media .iframe-wrapper iframe.gdoc-iframe {
-    height: calc(100% + 81px);
     top: -81px;
+    bottom: 0;
+    height: auto;
 }
 
 .iframe-wrapper.loading iframe {
